test/classes/initializers/generics/init-param-from-non-param.good
init-param-from-non-param.chpl:3: In initializer:
init-param-from-non-param.chpl:5: error: Initializing parameter 'p' to value not known at compile time
